# kscorer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
demo/: kscorer_demo.ipynb  kscorer_demo.py
src/kscorer/: kscorer.py  pmixin.py
