[build-system]

requires = ["setuptools>=68.2.2", "wheel"]

build-backend = "setuptools.build_meta"

# %%

[project]

name = "kscorer"

version = "1.0.0"

description = "Auto-select optimal K-means clusters with advanced scoring"

readme = "README.md"

authors = [{name = "Volodymyr Holomb", email = "wldmrgml@gmail.com"}]

license = {file = "LICENSE"}

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]

keywords = ["visualization", "analysis", "clustering"]

dependencies = [
    "kneefinder==0.0.2",
    "pandas==2.1.1",
    "scikit-learn==1.3.2",
    "seaborn==0.13.0",
    "tqdm==4.66.1"
]

requires-python = ">=3.9"

# %%

[project.urls]

Source = "https://github.com/woldemarg/kscorer"

Author = "https://www.linkedin.com/in/vholomb"

# %%

[tool.bumpver]

current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
# tag_message = "{new_version}"
# tag_scope = "default"
# pre_commit_hook = ""
# post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]

"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]

"src/prosphera/__init__.py" = ["{version}"]
